[gd_scene load_steps=11 format=3 uid="uid://c58yyta2hdulp"]

[ext_resource type="Script" path="res://Scripts/StateMachine/StateMachineState_Game.gd" id="1_fiind"]
[ext_resource type="Script" path="res://Scripts/Decorators/ControlDecorator.gd" id="2_f1jsb"]
[ext_resource type="Resource" uid="uid://xnnlqrtn0vui" path="res://ResearchTracks/rtd_golems.tres" id="2_unryd"]
[ext_resource type="PackedScene" uid="uid://cif1udarhmm2c" path="res://Scenes/research_track.tscn" id="3_5j0ak"]
[ext_resource type="Resource" uid="uid://bfs22cxftqca0" path="res://ResearchTracks/rtd_gears.tres" id="3_rvlh5"]
[ext_resource type="Theme" uid="uid://cqjlv35tewje1" path="res://theme.tres" id="3_yf0vc"]
[ext_resource type="Resource" uid="uid://b6lgcgt7gcvtj" path="res://ResearchTracks/rtd_muscle.tres" id="4_ohmf4"]
[ext_resource type="AudioStream" uid="uid://bj41kjm1xyiho" path="res://Sound/ChirpSound06.wav" id="8_4thog"]
[ext_resource type="AudioStream" uid="uid://dabxpgda7wfrt" path="res://Sound/clop.wav" id="9_olg7r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cut1r"]

[node name="GameState" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fiind")
research_track_data_sets = Array[Resource]([ExtResource("2_unryd"), ExtResource("3_rvlh5"), ExtResource("4_ohmf4")])
research_track = ExtResource("3_5j0ak")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MoneyStats" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MoneyAttr" type="Label" parent="MarginContainer/VBoxContainer/MoneyStats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Money:"

[node name="MoneyValue" type="Label" parent="MarginContainer/VBoxContainer/MoneyStats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "$0"

[node name="Spacer_postMoney" type="Control" parent="MarginContainer/VBoxContainer/MoneyStats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OpposumAttr" type="Label" parent="MarginContainer/VBoxContainer/MoneyStats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Opposum Income:"

[node name="ControlDecorator" type="Node" parent="MarginContainer/VBoxContainer/MoneyStats/OpposumAttr"]
script = ExtResource("2_f1jsb")

[node name="OpposumValue" type="Label" parent="MarginContainer/VBoxContainer/MoneyStats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "$0"

[node name="ControlDecorator" type="Node" parent="MarginContainer/VBoxContainer/MoneyStats/OpposumValue"]
script = ExtResource("2_f1jsb")

[node name="BlueprintStats" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BlueprintAttr" type="Label" parent="MarginContainer/VBoxContainer/BlueprintStats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Blueprints: "

[node name="ControlDecorator" type="Node" parent="MarginContainer/VBoxContainer/BlueprintStats/BlueprintAttr"]
script = ExtResource("2_f1jsb")

[node name="BlueprintValue" type="Label" parent="MarginContainer/VBoxContainer/BlueprintStats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"

[node name="ControlDecorator" type="Node" parent="MarginContainer/VBoxContainer/BlueprintStats/BlueprintValue"]
script = ExtResource("2_f1jsb")

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/BlueprintStats"]
custom_minimum_size = Vector2(0, 42)
layout_mode = 2
size_flags_horizontal = 3

[node name="IdleAttr" type="Label" parent="MarginContainer/VBoxContainer/BlueprintStats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Idle Workers:  "

[node name="ControlDecorator" type="Node" parent="MarginContainer/VBoxContainer/BlueprintStats/IdleAttr"]
script = ExtResource("2_f1jsb")

[node name="IdleValue" type="Label" parent="MarginContainer/VBoxContainer/BlueprintStats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"

[node name="ControlDecorator" type="Node" parent="MarginContainer/VBoxContainer/BlueprintStats/IdleValue"]
script = ExtResource("2_f1jsb")

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Generate Money" type="Control" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Generate Money"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Generate Money/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_cut1r")
text = "Click Me"

[node name="ControlDecorator" type="Node" parent="MarginContainer/VBoxContainer/TabContainer/Generate Money/HBoxContainer/Button"]
script = ExtResource("2_f1jsb")

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/TabContainer/Generate Money/HBoxContainer"]
layout_mode = 2

[node name="Spacer_postMoney" type="Control" parent="MarginContainer/VBoxContainer/TabContainer/Generate Money/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Generate Money/HBoxContainer/CenterContainer"]
layout_mode = 2
theme = ExtResource("3_yf0vc")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="UnlockButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Generate Money/HBoxContainer/CenterContainer/MarginContainer"]
layout_mode = 2
text = "Unlock"

[node name="ControlDecorator" type="Node" parent="MarginContainer/VBoxContainer/TabContainer/Generate Money/HBoxContainer/CenterContainer/MarginContainer/UnlockButton"]
script = ExtResource("2_f1jsb")

[node name="ClickPlayerAlpha" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/TabContainer/Generate Money/HBoxContainer"]
stream = ExtResource("8_4thog")
volume_db = -19.0
pitch_scale = 0.75
max_polyphony = 7

[node name="ClickPlayerBeta" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/TabContainer/Generate Money/HBoxContainer"]
stream = ExtResource("9_olg7r")
volume_db = 8.0
max_polyphony = 7

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Generate Money"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -83.5
offset_top = -72.0
offset_right = 83.5
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_yf0vc")

[node name="AugmentButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Generate Money/MarginContainer"]
visible = false
layout_mode = 2
text = "Augment"

[node name="ControlDecorator" type="Node" parent="MarginContainer/VBoxContainer/TabContainer/Generate Money/MarginContainer/AugmentButton"]
script = ExtResource("2_f1jsb")

[node name="AugmentETA" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Generate Money/MarginContainer"]
layout_mode = 2
text = "100%"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Generate Money"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -101.0
offset_right = 359.0
grow_vertical = 0
theme = ExtResource("3_yf0vc")

[node name="WorkshopsButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Generate Money/MarginContainer2"]
layout_mode = 2
text = "Damn my eyes - I should have workshops!
Dozens and Dozens of workshops!
Positively humming with activity!"
autowrap_mode = 2

[node name="ControlDecorator" type="Node" parent="MarginContainer/VBoxContainer/TabContainer/Generate Money/MarginContainer2/WorkshopsButton"]
script = ExtResource("2_f1jsb")

[node name="Workshops" type="Control" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Workshops"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Workshops/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_yf0vc")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Workshops/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainerA" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Workshops/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainerB" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Workshops/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HireMinion" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Workshops/HBoxContainer/MarginContainer/VBoxContainer/MarginContainerB"]
layout_mode = 2
text = "Hire Minion"

[node name="ControlDecorator" type="Node" parent="MarginContainer/VBoxContainer/TabContainer/Workshops/HBoxContainer/MarginContainer/VBoxContainer/MarginContainerB/HireMinion"]
script = ExtResource("2_f1jsb")

[node name="MarginContainerC" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Workshops/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BuildWorkshop" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Workshops/HBoxContainer/MarginContainer/VBoxContainer/MarginContainerC"]
layout_mode = 2
text = "Build Workshop"

[node name="ControlDecorator" type="Node" parent="MarginContainer/VBoxContainer/TabContainer/Workshops/HBoxContainer/MarginContainer/VBoxContainer/MarginContainerC/BuildWorkshop"]
script = ExtResource("2_f1jsb")

[node name="MarginContainerD" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Workshops/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Workshops/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_yf0vc")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Workshops/HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="WorkshopPanelLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Workshops/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Workshops:"

[node name="ControlDecorator" type="Node" parent="MarginContainer/VBoxContainer/TabContainer/Workshops/HBoxContainer/MarginContainer2/VBoxContainer/WorkshopPanelLabel"]
script = ExtResource("2_f1jsb")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Workshops/HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Workshops/HBoxContainer/MarginContainer2/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ListOfWorkshops" type="GridContainer" parent="MarginContainer/VBoxContainer/TabContainer/Workshops/HBoxContainer/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="Lab" type="Control" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Lab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_yf0vc")

[node name="ListOfLabProjects" type="GridContainer" parent="MarginContainer/VBoxContainer/TabContainer/Lab/MarginContainer"]
layout_mode = 2
columns = 5

[node name="Warehouse" type="Control" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Warehouse"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_yf0vc")

[node name="ListOfGoods" type="GridContainer" parent="MarginContainer/VBoxContainer/TabContainer/Warehouse/MarginContainer"]
layout_mode = 2
columns = 5

[node name="RantPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Ranting"

[node name="RantPopUp" type="MarginContainer" parent="."]
visible = false
top_level = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="ColorRect" type="ColorRect" parent="RantPopUp"]
layout_mode = 2
color = Color(0.5, 0.225, 0.5, 0.501961)

[node name="MarginContainer" type="MarginContainer" parent="RantPopUp/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ColorRect" type="ColorRect" parent="RantPopUp/ColorRect/MarginContainer"]
layout_mode = 2
color = Color(1, 0.454902, 1, 1)

[node name="MarginContainer" type="MarginContainer" parent="RantPopUp/ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="RantPopUp/ColorRect/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="RantPopUp/ColorRect/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="RantText" type="RichTextLabel" parent="RantPopUp/ColorRect/MarginContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "Rant goes here"

[node name="Spacer2" type="Control" parent="RantPopUp/ColorRect/MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RantFootnote" type="Label" parent="RantPopUp/ColorRect/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "*note: Metatherians are a classification of animals that include marsupials."
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="RantPopUp/ColorRect/MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="RantPopUp/ColorRect/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="RantPopUp/ColorRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Press ESC to bring up options"

[node name="DismissRant" type="Button" parent="RantPopUp/ColorRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Dismiss"

[connection signal="pressed" from="MarginContainer/VBoxContainer/TabContainer/Generate Money/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TabContainer/Generate Money/HBoxContainer/CenterContainer/MarginContainer/UnlockButton" to="." method="_on_unlock_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TabContainer/Generate Money/MarginContainer/AugmentButton" to="." method="_on_augment_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TabContainer/Generate Money/MarginContainer2/WorkshopsButton" to="." method="_on_workshops_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TabContainer/Workshops/HBoxContainer/MarginContainer/VBoxContainer/MarginContainerB/HireMinion" to="." method="_on_hire_minion_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TabContainer/Workshops/HBoxContainer/MarginContainer/VBoxContainer/MarginContainerC/BuildWorkshop" to="." method="_on_build_workshop_pressed"]
